--- a/applications/backlog-server/src/main/resources/application.properties
+++ b/applications/backlog-server/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=backlog-server
 
 server.port=8082
 registration.server.endpoint=http://localhost:8083
+management.security.enabled=false
