--- a/applications/registration-server/src/main/resources/application.properties
+++ b/applications/registration-server/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=registration-server
 
 server.port=8083
 registration.server.endpoint=http://localhost:8083
+management.security.enabled=false
