--- a/applications/timesheets-server/src/main/resources/application.properties
+++ b/applications/timesheets-server/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=timesheets-server
 
 server.port=8084
 registration.server.endpoint=http://localhost:8083
+management.security.enabled=false
