--- a/applications/timesheets-server/src/main/resources/application.properties
+++ b/applications/timesheets-server/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=timesheets-server
 server.port=8084
 registration.server.endpoint=http://localhost:8083
 management.security.enabled=false
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
