Simulate service slowdown.

--- a/applications/timesheets-server/src/main/resources/application.properties
+++ b/applications/timesheets-server/src/main/resources/application.properties
@@ -4,3 +4,4 @@ server.port=8084
 registration.server.endpoint=http://localhost:8083
 management.security.enabled=false
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
+hystrix.command.default.circuitBreaker.requestVolumeThreshold=2
