--- a/components/rest-support/build.gradle
+++ b/components/rest-support/build.gradle
@@ -3,5 +3,9 @@ dependencies {
     compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
     compile "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"
 
+    compile "org.springframework.cloud:spring-cloud-commons:1.3.2.RELEASE"
+    compile "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:1.4.3.RELEASE"
+
     compile "org.springframework:spring-web:$springVersion"
+
 }
