--- a/settings.gradle
+++ b/settings.gradle
@@ -17,4 +17,6 @@ include "databases:backlog-database"
 include "databases:registration-database"
 include "databases:timesheets-database"
 
+include "platform-services:eureka-server"
+
 include "integration-test"
