--- a/applications/backlog-server/src/main/resources/application.properties
+++ b/applications/backlog-server/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=backlog-server
-
 server.port=8082
-registration.server.endpoint=http://localhost:8083
 management.security.enabled=false
+registration.server.endpoint=http://registration-server
+#eureka.client.fetch-registry=true
+#eureka.client.registry-fetch-interval-seconds=30
+#logging.level.root=DEBUG
