--- a/components/rest-support/build.gradle
+++ b/components/rest-support/build.gradle
@@ -2,6 +2,6 @@ dependencies {
     compile "com.fasterxml.jackson.core:jackson-core:$jacksonVersion"
     compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
     compile "com.fasterxml.jackson.core:jackson-annotations:$jacksonVersion"
-
+    compile "org.springframework.cloud:spring-cloud-commons:1.3.2.RELEASE"
     compile "org.springframework:spring-web:$springVersion"
 }
