--- a/applications/timesheets-server/src/main/resources/application.properties
+++ b/applications/timesheets-server/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=timesheets-server
 server.port=8084
 management.security.enabled=false
+service-locator=local-config
+service-locator.endpoint.registration-server=http://localhost:8083
 #eureka.client.fetch-registry=true
 #eureka.client.registry-fetch-interval-seconds=30
 #logging.level.root=DEBUG
