--- a/platform-services/eureka-server/build.gradle
+++ b/platform-services/eureka-server/build.gradle
@@ -1,14 +1,5 @@
-apply plugin: "org.springframework.boot"
-apply plugin: "io.spring.dependency-management"
-
-dependencyManagement {
-    imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
-    }
-}
+apply from: "$projectDir/../server.gradle"
 
 dependencies {
-    compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.cloud:spring-cloud-starter-eureka-server"
-
 }
