--- a/applications/server.gradle
+++ b/applications/server.gradle
@@ -4,6 +4,7 @@ dependencies {
     compile project(":components:rest-support")
 
     compile "org.springframework.boot:spring-boot-starter-web"
+    compile "org.springframework.boot:spring-boot-starter-actuator"
 
     testCompile project(":components:test-support")
 }
