--- a/applications/server.gradle
+++ b/applications/server.gradle
@@ -5,6 +5,7 @@ dependencies {
 
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-actuator"
+    compile "org.springframework.cloud:spring-cloud-starter-config:1.1.2.RELEASE"
 
     testCompile project(":components:test-support")
 }
