--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext {
         springBootVersion = "1.5.9.RELEASE"
         springVersion = "4.3.13.RELEASE"
+        springCloudVersion = 'Edgware.SR2'
         jacksonVersion ="2.9.3"
     }
 
