--- a/applications/server.gradle
+++ b/applications/server.gradle
@@ -1,10 +1,17 @@
 apply plugin: "org.springframework.boot"
 
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:$springCloudVersion"
+    }
+}
+
 dependencies {
     compile project(":components:rest-support")
 
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-actuator"
+    compile 'org.springframework.cloud:spring-cloud-starter-eureka'
 
     testCompile project(":components:test-support")
 }
