--- a/settings.gradle
+++ b/settings.gradle
@@ -17,6 +17,7 @@ include "databases:backlog-database"
 include "databases:registration-database"
 include "databases:timesheets-database"
 
+include "platform-services:eureka-server"
 include "platform-services:hystrix-dashboard"
 
 include "integration-test"
