--- a/platform-services/eureka-server/src/main/resources/application.yml
+++ b/platform-services/eureka-server/src/main/resources/application.yml
@@ -1,43 +1,69 @@
 spring.application.name: eureka-server
+logging.level.com.netflix: DEBUG
+management:
+  security:
+    enabled: false
 
----
-spring:
-  profiles: eureka-peer1
-server.port: 8761
+# Default Eureka Port
+#server:
+#  port: 8761
+
+
+## Running Eureka in standalone mode
+server:
+  port: 8761
+
 eureka:
   instance:
-    hostname: eureka-peer1
-    metadataMap:
-      zone: us-central
+    hostname: localhost
   client:
+    registerWithEureka: false
+    fetchRegistry: false
     serviceUrl:
-      defaultZone: http://localhost:8762/eureka/
-    enabled: true
-    register-with-eureka: true
-    fetch-registry: true
-    preferSameZoneEureka: true
-    healthcheck:
-      enabled: false
-  datacenter: chicago
-  environment: production
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+  datacenter: san-franciso
+  environment: qa
 
----
-spring:
-  profiles: eureka-peer2
-server.port: 8762
-eureka:
-  instance:
-    hostname: eureka-peer2
-    metadataMap:
-      zone: us-central
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-    enabled: true
-    register-with-eureka: true
-    fetch-registry: true
-    preferSameZoneEureka: true
-    healthcheck:
-      enabled: false
-  datacenter: chicago
-  environment: production
+
+## Running Eureka in Peer Cluster Mode (single AZ)
+#---
+#spring:
+#  profiles: eureka-peer1
+#server.port: 8761
+#eureka:
+#  instance:
+#    hostname: eureka-peer1
+#    metadataMap:
+#      zone: us-central
+#  client:
+#    serviceUrl:
+#      defaultZone: http://localhost:8762/eureka/
+#    enabled: true
+#    register-with-eureka: true
+#    fetch-registry: true
+#    preferSameZoneEureka: true
+#    healthcheck:
+#      enabled: false
+#  datacenter: san-franciso
+#  environment: qa
+#
+#---
+#spring:
+#  profiles: eureka-peer2
+#server.port: 8762
+#eureka:
+#  instance:
+#    hostname: eureka-peer2
+#    metadataMap:
+#      zone: us-central
+#  client:
+#    serviceUrl:
+#      defaultZone: http://localhost:8761/eureka/
+#    enabled: true
+#    register-with-eureka: true
+#    fetch-registry: true
+#    preferSameZoneEureka: true
+#    healthcheck:
+#      enabled: false
+#  datacenter: san-franciso
+#  environment: qa
